--- a/JavaScript/数组编程/数组方法.md
+++ b/JavaScript/数组编程/数组方法.md
@@ -2,3 +2,39 @@
 
 （当前元素，索引，数组） 返回undefined
 
+
+
+includes 
+
+字符串和数组都有
+
+Array.prototype.includes方法返回一个布尔值，表示某个数组是否包含给定的值，与字符串的includes方法类似。该方法属于 ES7 ，但 Babel 转码器已经支持。
+
+
+
+indexOf()
+
+数组和字符串都有
+
+
+
+
+
+`**lastIndexOf()**` 方法返回指定元素（也即有效的 JavaScript 值或变量）在数组中的最后一个的索引，如果不存在则返回 -1。从数组的后面向前查找，从 `fromIndex` 处开始。
+
+```js
+var array = [2, 5, 9, 2];
+var index = array.lastIndexOf(2);
+// index is 3
+index = array.lastIndexOf(7);
+// index is -1
+index = array.lastIndexOf(2, 3);
+// index is 3
+index = array.lastIndexOf(2, 2);
+// index is 0
+index = array.lastIndexOf(2, -2);
+// index is 0
+index = array.lastIndexOf(2, -1);
+// index is 3
+```
+
