--- a/计算机网络/计网笔记总结.md
+++ b/计算机网络/计网笔记总结.md
@@ -1,5 +1,15 @@
 # 计算机网络【笔记总结】
 
+## 互联网如何工作
+
+推荐文章https://developer.mozilla.org/zh-CN/docs/Learn/Common_questions/How_does_the_Internet_work
+
+## 剖析url
+
+```html
+http【protocol协议】://www.example.com【Domain Name域名】:80【Port 端口】/path/to/myfile.html【path to the file路径】?key1=value1&key2=value2【parameters 参数】#SomewhereInTheDocument【anchor】
+```
+
 ## http报文详解
 
 ### 分类
