--- a/JavaScript/树/二叉树遍历.md
+++ b/JavaScript/树/二叉树遍历.md
@@ -9,6 +9,8 @@
 
 二叉树--------二叉搜索树BST-------平衡二叉树AVL----------B树B-红黑树（了解）
 
+二叉树包括满二叉树和完全二叉树 http://c.biancheng.net/view/3384.html
+
 [1.前序遍历](#1)  
 
 [2.中序遍历](#2)  
